<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Viral Tube</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Signup</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_age">Age</string>
    <string name="hint_location">Location</string>
    <string name="radio_individual">Individual</string>
    <string name="radio_college">College</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Password field should not be empty</string>
    <string name="err_msg_password_length">Your password must be atleast 8 digits</string>
    <string name="err_msg_name">Enter a valid name</string>
    <string name="err_msg_phonenumber">Enter a valid phone number</string>
    <string name="err_msg_age">Entered age is invalid</string>
    <string name="err_msg_location">Enter a location</string>
    <string name="err_msg_termsandconditions">Please accept the terms and conditions</string>
    <string name="err_msg_nointernet">Please check your internet connection</string>
    <string name="contact">contact</string>
    <string name="share">share</string>
    <string name="promote">promote</string>
    <string-array name="ContactNames">
        <item>Krishna murthy</item>
        <item>Abhishek</item>
        <item>Keerthana</item>
        <item>Krishna murthy</item>
        <item>Abhishek</item>
        <item>Keerthana</item>
        <item>Krishna murthy</item>
        <item>Abhishek</item>
        <item>Keerthana</item>
    </string-array>
    <string-array name="MobileNumbers">
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>
        <item>9901333695</item>s
    </string-array>
    <string name="text_viral">Viral</string>
    <string name="text_tube"> Tube</string>
    <string name="show_password">Show Password</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="err_msg_gender">Please select a gender</string>
    <string name="video_name">Video name</string>
    <string name="tag_optional">Tag (optional)</string>
    <string name="name">Name</string>
    <string name="mobile_number">1234567890</string>
    <string name="upload">Upload</string>
    <string name="hint_video_title">Enter Video title</string>
    <string name="cancel">Cancel</string>
    <string name="err_server">Service unavailable</string>
    <string name="err_registration">registration failed</string>
    <string name="err_mob_regestered">Mobile number already registered</string>
    <string name="err_email_regestered">Email already registered</string>
    <string name="err_parameter">User name or Password incorrect</string>
    <string name="back_press_to_exit">press back again to exit</string>
    <string name="enter_optional_tag">Enter Optional Tag</string>
    <string name="shortageofvotes">You should get atleast 100 votes in Level1 to go for level2</string>
    <string name="go_to_level1">Go to Level1</string>
    <string name="buypremium">You should buy Premium membership to go for Level2</string>
    <string name="getpremium">Buy Premium</string>
    <string name="proceed_payment">Proceed payment</string>
    <string name="enter_adress">Enter Adress</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_name">Enter name</string>
    <string name="please_provide_correct_details">Please provide correct details</string>
    <string name="sorry_no_contacts_matched">Sorry No contacts Found</string>
    <string name="sorry_no_videos_found_at_this_moment">Sorry no Videos Found at this Moment</string>
    <string name="Rs">\u20B9</string>
    <string name="_610">610</string>
    <string name="votes"> Votes</string>
    <string name="views"> Views</string>
    <string name="refresh">refresh</string>
    <string name="search">search</string>
    <string-array name="bank">
        <item>Select Bank</item>
        <item>"Bank of Baroda"</item>
        <item>"Bank of Baroda Retail"</item>
        <item>"Bank of India"</item>
        <item>"Bank of Maharashtra"</item>
        <item>"Canara Bank NetBanking"</item>
        <item>"Catholic Syrian Bank"</item>
        <item>"Central Bank of India"</item>
        <item>"Corporation Bank"</item>
        <item>"DBS Bank Ltd"</item>
        <item>"DCB BANK Business"</item>
        <item>"DCB BANK Personal"</item>
        <item>"Deutsche Bank"</item>
        <item>"Dhanlaxmi Bank"</item>
        <item>"Fedral Bank"</item>
        <item>"IDBI Bank"</item>
        <item>"Indian Bank"</item>
        <item>"Indian Overseas Bank"</item>
        <item>"Indusind Bank"</item>
        <item>"Jammu and Kashmir Bank"</item>
        <item>"Karnataka Bank"</item>
        <item>"Karur Vysya Bank"</item>
        <item>"Lakshmi Vilas Bank NetBanking"</item>
        <item>"ORIENTAL BANK OF COMMERCE"</item>
        <item>"Punjab &amp; Sind Bank"</item>
        <item>"Punjab National Bank"</item>
        <item>"Punjab National Bank"</item>
        <item>"Royal Bank Of Scotland"</item>
        <item>"SaraSwat Bank"</item>
        <item>"South Indian Bank"</item>
        <item>"Standard Chartered Bank"</item>
        <item>"Tamilnad Mercantile Bank"</item>
        <item>"UCO Bank"</item>
        <item>"Union Bank"</item>
        <item>"United Bank of India"</item>
    </string-array>
    <string-array name="bank_code">
        <item>"0"</item>
        <item>"1045"</item>
        <item>"1046"</item>
        <item>"1012"</item>
        <item>"1033"</item>
        <item>"1030"</item>
        <item>"1031"</item>
        <item>"1028"</item>
        <item>"1004"</item>
        <item>"1047"</item>
        <item>"1042"</item>
        <item>"1027"</item>
        <item>"1024"</item>
        <item>"1038"</item>
        <item>"1019"</item>
        <item>"1007"</item>
        <item>"1026"</item>
        <item>"1029"</item>
        <item>"1015"</item>
        <item>"1001"</item>
        <item>"1008"</item>
        <item>"1018"</item>
        <item>"1009"</item>
        <item>"1035"</item>
        <item>"1055"</item>
        <item>"1048"</item>
        <item>"1049"</item>
        <item>"1050"</item>
        <item>"1053"</item>
        <item>"1022"</item>
        <item>"1051"</item>
        <item>"1044"</item>
        <item>"1057"</item>
        <item>"1016"</item>
        <item>"1041"</item>
        <item>"1039"</item>
        <item>"1005"</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">filter</string>
    <string name="todo">TODO</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="password_sent">SMS has been sent to your registered Mobile number which will allow you to reset your password. Please check your SMS</string>
    <string name="change_password">Change Password</string>
    <string name="skip">Skip>></string>
    <string name="received_password">Received Password</string>
    <string name="about_us_general_business">ViralTube, a Mobile Application based company is established in the IT Headquarter of India. Thinking beyond the conventional ways of what can be perpetrated with video sharing and advertising revenue,Our model whirls around this traditional business model. Thereby, we intend to earmark this vision of company in reaching the mass of entire India, its people and its youth in getting ahead with the mind blogging multifariousness of the company.</string>
    <string name="about_us_purpose">To attain leadership and set a benchmark for video sharing and advertisement revenue generating application on the ever booming android field of technology by inculcation within the app intensified services and desired profits.</string>
    <string name="about_us_vision">ViralTube envisions a rostrum for present youth and the people where everyone is set glued to their smart phones on which information flows through the tip of fingers through various applications. Your valuable time on our application stands out to be the best with our services that are bound to influence our users to the greatest extent and a whole new awesome experience.</string>
    <string name="about_us_missinstatement">To act with decorum and deliver as promised, build a never ending alliance with our application users and also the clients. Pledge to provide unmatched quality experience by carrying business in the most innovative method in sync with the upmarket technology.</string>
    <string name="about_us_goals">An epidemic augmentation into the sphere of video content sharing and overshadow the entire Indian market of various video sharing platforms. Henceforth, inventing the best foundation for its key users. Invariably skyrocket the number of users and the investment towards the company in achieving utmost support towards the various services development. To befit as a key player in the video content sharing and advertisement revenue generation industry.</string>
    <string name="about_us_corevalues">We trust in handling our application users with esteem obeisance. Inculcating our other core values such s innovation, trend changing ideas, market revolutionary plans. All of these incorporated with uplift creativity and inventions. At ViralTube the jeans run with the best of morality, rectitude, solidarity,unification and ethical functioning of our business.</string>
    <string name="about_app">First time ever in the history of Karnataka!! Multi-talent REALITY SHOW on the app. Viral tube is a voting based reality show app to provide an opportunity to people from all walks of life to showcase their talent and rise to fame. It is a true celebration of the youthful spirit, that features stellar performances of singers, dancers, theatre artists, beatboxers, musicians, comedians, magicians, and many more talents, all vying for their chance to win the entry to the golden stage and become a real celebrity. To sign up as a participant, download the app and provide basic info about your self to receive more information via email. Viewers, ﬁnd exclusive content of never-seen-before performances and receive updates about your favourite contestants. </string>
</resources>