<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="start"
            android:textSize="@dimen/text_view_size_xlarge"/>
        <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
            android:id="@+id/vT_fcp_skip"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:text="@string/skip"
            android:textSize="@dimen/text_view_size_large"/>
    </LinearLayout>
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
        android:id="@+id/vE_fcp_receivedpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/received_password"
        android:background="@color/gray"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:inputType="text|textCapSentences"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
        android:id="@+id/vE_fcp_currentpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/enter_new_password"
        android:background="@color/gray"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
        android:id="@+id/vE_fcp_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/confirm_password"
        android:background="@color/gray"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <Button

        android:id="@+id/vB_fcp_update"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingLeft="@dimen/button_paddingLeft"
        android:paddingRight="@dimen/button_paddingRight"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/button_txt18sp"
        android:paddingStart="@dimen/button_paddingLeft"
        android:paddingEnd="@dimen/button_paddingRight" />
</LinearLayout>
