<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.viraltubesolutions.viraltubeapp.activities.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/email_password_layout"
            android:layout_marginBottom="14dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:src="@drawable/icon_web"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/splash_screen_image"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                >
                <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
                    android:id="@+id/txt_viral"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/text_viral"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    />

                <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
                    android:id="@+id/txt_tube"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_tube"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:background="#AA00FF"
                    android:textColor="@color/colorwhite"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/email_layout"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@drawable/edittextstyle"
                >
                <ImageView
                    android:layout_width="@dimen/icondimens"
                    android:layout_height="@dimen/icondimens"
                    android:src="@drawable/email"
                    android:layout_gravity="center"
                    android:paddingLeft="10sp"/>


                    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
                        android:id="@+id/vE_al_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress|textAutoComplete"
                        android:paddingLeft="10sp"
                        android:background="@android:color/transparent"
                        />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/password_layout"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@drawable/edittextstyle"
                android:maxLines="1"
                >
                <ImageView
                    android:layout_width="@dimen/icondimens"
                    android:layout_height="@dimen/icondimens"
                    android:src="@drawable/password"
                    android:layout_gravity="center"
                    android:paddingLeft="10sp"/>

                    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
                        android:id="@+id/vE_al_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"
                        android:paddingLeft="10sp"
                        android:maxLines="1"
                        />

            </LinearLayout>
            <CheckBox
                android:id="@+id/vC_al_showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_view_size_small"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>


            <Button
                android:id="@+id/vB_al_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
              android:layout_gravity="center"
                android:paddingLeft="@dimen/button_paddingLeft"
                android:paddingRight="@dimen/button_paddingRight"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_txt18sp"
                />
            <LinearLayout
                android:id="@+id/textlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin">
                <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
                    android:id="@+id/vT_al_dont_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_yet"
                    android:textSize="@dimen/text_view_size_small"/>
                <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
                    android:id="@+id/vT_al_signup_from_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/signup"
                    android:textSize="@dimen/text_view_size_medium"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="center">
                <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
                    android:id="@+id/vT_al_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/text_view_size_small"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
