<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    >
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
        android:id="@+id/vE_fud_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/hint_video_title"
        android:background="@color/gray"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:inputType="text|textCapSentences"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
        android:id="@+id/vE_fud_tag"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/enter_optional_tag"
        android:background="@color/gray"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:inputType="text|textCapSentences"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/vB_fud_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="right|center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/button_txt18sp" />

        <Button

            android:id="@+id/vB_fud_upload"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="right|center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/button_txt18sp" />
    </LinearLayout>
</LinearLayout>
