<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <com.viraltubesolutions.viraltubeapp.customs.MyCustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vT_fp_forgotpassword_txt"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_view_size_xlarge"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />

        <com.viraltubesolutions.viraltubeapp.customs.MyCustomEditText
            android:layout_gravity="center"
            android:id="@+id/vE_fp_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/hint_email"
            android:gravity="center"
            android:background="@color/gray"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/black"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:id="@+id/vB_fp_submit"
        android:paddingLeft="@dimen/button_paddingLeft"
        android:paddingRight="@dimen/button_paddingRight"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/button_txt18sp"
        android:textAllCaps="false"
        android:textColor="@color/colorwhite"
        android:paddingStart="@dimen/button_paddingLeft"
        android:paddingEnd="@dimen/button_paddingRight" />

</LinearLayout>